# aoc24

./: day1.py  day18.py  day19.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  pyproject.toml
