[project]
name = "aoc24"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.19.0",
    "jaxtyping>=0.2.36",
    "numpy>=2.1.3",
    "scipy>=1.14.1",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5"]
